--- a/Template 1/css/index.css
+++ b/Template 1/css/index.css
@@ -7,20 +7,25 @@ body, html {
 .head {
   display: flex;
   justify-content: space-around;
-  padding: 3px;
+  padding: 5px;
+}
+
+.head i {
+  color: #EEDB1F;
+  padding-right: 3px;
 }
 
 .navbar {
   display: flex;
   justify-content: space-around;
-  padding: 4px;
+  padding: 12px;
 }
 
 nav {
   overflow: hidden;
   background-color: white;
   z-index: 99999;
-  box-shadow: 0px 3px 5px grey;
+  box-shadow: 0px 2px 3px grey;
 }
 
 nav a {
@@ -28,7 +33,7 @@ nav a {
   display: block;
   color: #616161;
   text-align: center;
-  padding: 10px;
+  padding: 12px;
   text-decoration: none;
   font-family: "Lato", sans-serif;
   font: 13px;
@@ -39,10 +44,10 @@ nav a {
 }
 
 .bgimg {
-  max-width: 30%;
-  max-height: 30%;
-  display: flex;
+  max-width: 20%;
+  border-radius: 20px;
   float: right;
+  margin-right: 15px;
 }
 
 .plant {
@@ -50,6 +55,27 @@ nav a {
   justify-content: space-around;
   margin-top: 20px;
   margin: 12px;
+}
+
+.bgimg1 {
+  max-width: 10%;
+  border-radius: 20px;
+  float: left;
+  margin-right: 15px;
+}
+
+.button {
+  background: #011c37;
+  color: #15DEA5;
+  font-size: 3rem;
+  cursor: pointer;
+  padding: 1.85rem 3rem;
+  border-radius: 10rem;
+  transform: scale(1);
+  transition: transform 400ms;
+}
+.button:hover {
+  transform: scale(1.15);
 }
 
 /*# sourceMappingURL=index.css.map */
