--- a/Template-3/css/custom.css
+++ b/Template-3/css/custom.css
@@ -32,3 +32,71 @@ body html{
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px);
 }
+
+.menu{
+  display:flex;
+  justify-content: space-around;
+}
+
+nav a {
+  float: left;
+  display: block;
+  color: #616161;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  font-size: 13px;
+  line-height: 1.5;
+  margin-left: 100px;
+  opacity: 70%;
+}
+
+nav a:hover{
+  opacity: 90%;
+  color: black;
+  transition: 0.3s;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.contenu{
+  display: flex;
+  justify-content: space-around;
+}
+
+.imgcouv img{
+  width: 750px;
+  height: 750px;
+}
+
+.text p{
+  margin-left: 150px;
+  font-family: "Lato", sans-serif;
+  font-size: 13px;
+  line-height: 1.5;
+  text-align: justify;
+  margin-right: 50px;
+  opacity: 70%;
+}
+
+.text h1{
+  margin-left: 150px;
+  font-family: "Lato", sans-serif;
+  font-size: 100px;
+  letter-spacing: 3px;
+  font-weight: normal;
+}
+
+.text h2{
+  margin-left: 200px;
+  font-family: "Lato", sans-serif;
+  font-size: 40px;
+  letter-spacing: 3px;
+  font-weight: normal;
+  margin-bottom: 0px;
+}
