--- a/Template-3/css/custom.css
+++ b/Template-3/css/custom.css
@@ -90,6 +90,7 @@ nav a:hover{
   font-size: 100px;
   letter-spacing: 3px;
   font-weight: normal;
+  border-spacing: 0;
 }
 
 .text h2{
@@ -97,6 +98,25 @@ nav a:hover{
   font-family: "Lato", sans-serif;
   font-size: 40px;
   letter-spacing: 3px;
-  font-weight: normal;
-  margin-bottom: 0px;
+  font-weight: lighter;
+  border-spacing: 0;
+  opacity: 60%;
 }
+
+.button{
+  font-size: 14px;
+  font-family: "Lato", sans-serif;
+  border-radius: 50px;
+  font-weight: bold;
+  text-align: center;
+  color:#FAF8F8;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top:20px;
+  padding-bottom: 20px;
+  margin-bottom: 60px;
+  background-color: #73140C;
+  margin-top: 30px;
+  border: none;
+  margin-left: 300px;
+ }
