--- a/Template-3/css/custom.css
+++ b/Template-3/css/custom.css
@@ -19,8 +19,12 @@ body html{
   width: 35px;
   height: 5px;
   background-color: #FAF8F8;
-  margin: 6px 0;
+  margin: 5px 15px 5px 5px;
   transition: 0.4s;
+}
+
+.bar1 {
+  margin-top: 10px;
 }
 
 .change .bar1 {
@@ -49,7 +53,6 @@ nav a {
   margin-left: 20px;
   margin-right: 100px;
   opacity: 70%;
-  padding-bottom: 5px;
 }
 
 nav a:hover{
@@ -138,6 +141,6 @@ nav a:hover{
   margin-block-end:0px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  margin-left: 300px;
-  margin-top: -100px;
+  margin-left: 50px;
+  margin-top: 30px;
  }
